# ai-backed-research

./: .dockerignore  .env.example  .env.setup-guide.md  .gitignore  CHANGELOG.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PHASE1_SUMMARY.md  QUICK_START.md  README.md  README_CLI.md  api_server.py  demo_review.py  entrypoint.sh  export_to_web.py  pyproject.toml  requirements.txt  run_full_review.py  run_full_review_backup.py  test_setup.py
.claude/: CLAUDE.md
config/: models.json
docs/: model-assignments.md  multi-stage-writing-plan.md  scientific-research-process-options.md
research_cli/: __init__.py  categories.py  cli.py  config.py  db.py  interactive.py  model_config.py  performance.py
research_cli/agents/: __init__.py  coauthor.py  data_analysis_agent.py  desk_editor.py  integration_editor.py  lead_author.py  moderator.py  paper_writer_agent.py  research_notes_agent.py  writer.py  (+4 more)
scripts/: migrate_keys.py  test_api_connections.py
tasks/: lessons.md  todo.md
tests/: bench_gemini_models.py  bench_writer_models.py  test_admin_articles.py  test_category_classifier.py  test_fault_tolerance.py  test_frontend_integration.py  test_gemini3_comparison.py  test_gemini_flash_roles.py  test_gemini_streaming.py  test_integrity.py  test_json_repair.py  test_llm_token_tracking.py  test_model_comparison.py  test_reviewer_prompt.py  test_role_vs_model.py
web/: about.html  admin-edit.html  admin.html  api-docs.html  apply.html  article.html  ask-topic.html  blog-reader.html  create-report.html  index.html  my-research.html  research-queue.html  review.html  submit.html
(+95 files in other folders)
